<resources>
    <string name="app_name">tracking-ui</string>
    <string name="start_button">start</string>
    <string name="bluetooth_btn">ON/OFF</string>
    <string name="discoverability">Enable Discoverability</string>
    <string name="saveLocation">Save Location</string>
    <string name="discover">Discover</string>
    <string name="start_connection">Start Connection</string>
    <string name="calibrate_camera">Calibrate Camera</string>
    <string name="save">Save</string>
    <string name="calibrate_scale">Calibrate Scale</string>
</resources>
